--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 </head>
 
 <body>
-
-    <body>
-        <header>
+    <header>
             <div>
                 <img src="img/background.jpg" alt="Background Geneva Lake">
                 <h1>Stanislav Skachko</h1>
@@ -22,11 +20,11 @@
             <nav>
                 <ul>
                     <li><a href="#main" class="menu">Main</a></li>
-                    <li><a href="#experience" class="menu">Experience</a></li>
-                    <li><a href="#portfolio" class="menu">Locations</a></li>
-                    <li><a href="#feedback" class="menu">Background</a></li>
-                    <li><a href="#contact" class="menu">Skills</a></li>
-                    <li><a href="#contact" class="menu">Contact</a></li>
+                    <li><a href="#experience" class="menu">My Experience</a></li>
+                    <li><a href="#locations" class="menu">My Locations</a></li>
+                    <li><a href="#study" class="menu">My Background</a></li>
+                    <li><a href="#skills" class="menu">My Skills</a></li>
+                    <li><a href="#contact" class="menu">Contact me</a></li>
                 </ul>
             </nav>
         </header>
@@ -138,54 +136,57 @@
                     <li>Research & Developmnet, Consulting, Technology</li>
                 </ul>
             </div>
-            
-            
+        </section>    
+        <section id="locations">    
             <h3>My project Locations</h3>
-            https://www.google.com/maps/@47.1441944,-66.0869884,3z
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias,
-            laudantium placeat similique corporis ex! Iure, fugiat, iste eveniet
-            dolore illo est sit quisquam. Quam, perferendis, deserunt ipsum temporibus
-            possimus eos.</p>
-            <h3>Service3</h3>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-            sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-            magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-            quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-            ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-            dolor in hendrerit in vulputate velit esse molestie consequat,
-            vel illum dolore eu feugiat nulla facilisis at vero eros et
-            accumsan et iusto odio dignissim qui blandit praesent luptatum
-            zzril delenit augue duis dolore te feugait nulla facilisi.
-            Nam liber tempor cum soluta nobis eleifend option congue
-            nihil imperdiet doming id quod mazim placerat facer possim
-            assum. Typi non habent claritatem insitam; est usus legentis
-            in iis qui facit eorum claritatem. Investigationes
-            </p>
+            <iframe src="https://www.google.com/maps/d/embed?mid=16ofl0v3YK8HnRo4zMb6GqVn-EW_s9sGf&hl=en" width="1024" height="400"></iframe>
+        <section>
+        <section id="study">
+            <h3>My background</h3>
+            <div id="study">
+                <img src="img/riverein.png" alt="Rive Rein"
+                <ul>
+                    <li>Location: Switzerland, Vevey</li>
+                    <li>Alma Mater: Nestle Rive Rein</li>
+                    <li>Major: OpEx & Projects management</li>
+                </ul>
+            </div>            
+            <div id="study">
+                <img src="img/nulpmain.png" alt="National University Lviv Politechnic"
+                <ul>
+                    <li>Location: Ukraine, Lviv</li>
+                    <li>Alma Mater: National University Lviv Politechnic</li>
+                    <li>Major: Chemical Engineering & Technology</li>
+                </ul>
+            </div>
         </section>
-        <section id="portfolio">
-            <h3>Our work</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/PHh9IDhk-LE" frameborder="0" allowfullscreen></iframe>
-        </section>
-        <section id="feedback">
-            <h3>What our clients say</h3>
-            <img src="img/client.jpg" alt="client">
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-            sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-            magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-            quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-            ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-            dolor in hendrerit in vulputate velit esse molestie consequat,
-            vel illum dolore eu feugiat nulla facilisis at vero eros et
-            accumsan et iusto odio dignissim qui blandit praesent luptatum
-            zzril delenit augue duis dolore te feugait nulla facilisi.
-            </p>
-        </section>
+        <section id="skills">
+            <div id="skills">
+                <h3>My skills</h3>
+                <ul>
+                    <li>Operations management</li>
+                    <li>Business process analysis</li>
+                    <li>Project management</li>
+                </ul>
+            </div>
+            <div id="skills">
+                <h3>Languages</h3>
+                <ul>
+                    <li>English</li>
+                    <li>Ukrainian</li>
+                    <li>Russian</li>
+                </ul>
+            </div>
+         </section>
     </main>
     <footer>
         <div id="contact">
-            <h3>Drop us a line</h3>
+            <h3>My links</h3>
+                    <li><img src="img/background.jpg" alt="Background Geneva Lake" href="https://www.facebook.com/"><a href="https://www.facebook.com/" img src="img/background.jpg" alt="Background Geneva Lake"></a>class="menu">Main</a></li>
+                    <li><a href="#experience" class="menu">My Experience</a></li>
+                    <li><a href="#locations" class="menu">My Locations</a></li>
         	<form action="">
-        	    <input type="text" placeholder="Name"><br>
+        	    <p>Your name </p><input type="text" placeholder="Your name"><br>
         		<input type="email" placeholder="E-mail"><br>
         		<textarea placeholder="Message"></textarea><br>
                 <input type="submit" value="Send">
