--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@
 
 <body>
     <header>
-        <section id="head">
             <img src="img/background.jpg" alt="Background Geneva Lake">
-        </section>
-        <section id="headertext">
             <h1>Stanislav Skachko</h1>
             <h2>Professional bio</h2>
-        </section>
     </header>
     <nav class="navbar">
         <a href="#brief" class="menu">Brief</a>
@@ -30,7 +26,7 @@
         <a href="#skills" class="menu">My Skills</a>
         <a href="#contact" class="menu">Contact me</a>
     </nav>
-    <main class="main">
+    <main>
         <section id="brief">
             <h3>Brief</h3>
             <img src="img/stanley.png" alt="Stanislav Skachko Photo">
@@ -49,14 +45,16 @@
         <section id="experience">
             <h3>My experience and projects</h3>
             <article class="project">
+                <p>Morgan</p>
                 <img src="img/morgan.png" alt="Morgan logo">
                 <ul>
                     <li>Location: Ukraine, Poland, Germany, Baltics</li>
                     <li>Brief: Furniture supplier for IKEA, Steinhoff, XXXLutz</li>
                     <li>Context: Operations &projects management, strategy consuting, ERP implementation, business processes improvement</li>
                 </ul>
-                </div>
+            </article>
                 <article class="project">
+                <p>Morgan</p>
                     <img src="img/aptiv.png" alt="Aptiv logo">
                     <ul>
                         <li>Location: Central Ukraine &Romania</li>
@@ -65,6 +63,7 @@
                     </ul>
                 </article>
                 <article class="project">
+                <p>Morgan</p>
                     <img src="img/roshen.png" alt="Roshen logo">
                     <ul>
                         <li>Location: Central Ukraine</li>
@@ -73,6 +72,7 @@
                     </ul>
                 </article>
                 <article class="project">
+                <p>Morgan</p>
                     <img src="img/dreyer.png" alt="dreyer logo">
                     <ul>
                         <li>Location: USA, California</li>
@@ -81,6 +81,7 @@
                     </ul>
                 </article>
                 <article class="project">
+                <p>Morgan</p>
                     <img src="img/nestle.png" alt="Konolfingen logo">
                     <ul>
                         <li>Location: Switzerland, Konolfingen</li>
@@ -89,6 +90,16 @@
                     </ul>
                 </article>
                 <article class="project">
+                <p>Morgan</p>
+                <img src="img/nestle.png" alt="Sterling rd. logo">
+                    <ul>
+                        <li>Location: Canada, Toronto</li>
+                        <li>Brief: Nestle Confectonary allergen-free factory</li>
+                        <li>LEAN &OPEX projects implementation, improvement of quality, delivery, cost, strategy consulting</li>
+                    </ul>
+                </article>
+                <article class="project">
+                <p>Morgan</p>
                     <img src="img/nestle.png" alt="Sterling rd. logo">
                     <ul>
                         <li>Location: Canada, Toronto</li>
@@ -97,14 +108,7 @@
                     </ul>
                 </article>
                 <article class="project">
-                    <img src="img/nestle.png" alt="Sterling rd. logo">
-                    <ul>
-                        <li>Location: Canada, Toronto</li>
-                        <li>Brief: Nestle Confectonary allergen-free factory</li>
-                        <li>LEAN &OPEX projects implementation, improvement of quality, delivery, cost, strategy consulting</li>
-                    </ul>
-                </article>
-                <article class="project">
+                <p>Morgan</p>
                     <img src="img/nestlesvi.png" alt="Svitoch logo">
                     <ul>
                         <li>Location: Ukraine, Lviv</li>
@@ -113,7 +117,8 @@
                     </ul>
                 </article>
                 <article class="project">
-                    <img src="img/links.png" alt="Links labs logo">
+                <p>Morgan</p>
+                <img src="img/links.png" alt="Links labs logo">
                     <ul>
                         <li>Location: Ukraine, Lviv</li>
                         <li>Brief: Household and automotive FMCG production facility</li>
@@ -121,6 +126,7 @@
                     </ul>
                 </article>
                 <article class="project">
+                <p>Morgan</p>
                     <img src="img/halpap.png" alt="Halpap logo">
                     <ul>
                         <li>Location: Ukraine, Lviv</li>
@@ -129,7 +135,8 @@
                     </ul>
                 </article>
                 <article class="project">
-                    <img src="img/worldbank.png" alt="Worldbank logo">
+                <p>Morgan</p>
+                <img src="img/worldbank.png" alt="Worldbank logo">
                     <ul>
                         <li>Location: Ukraine</li>
                         <li>Brief: Alternative energy consulting</li>
@@ -137,6 +144,7 @@
                     </ul>
                 </article>
                 <article class="project">
+                <p>Morgan</p>
                     <img src="img/nulp.png" alt="National University Lviv Politechnic logo">
                     <ul>
                         <li>Location: Ukraine, Lviv</li>
@@ -169,7 +177,7 @@
             </div>
         </section>
         <section id="skills">
-            <div class="skills">
+            <div class="myskills">
                 <h3>My skills</h3>
                 <a>Operations management</a>
                 <span class="fa fa-star checked"></span>
@@ -256,7 +264,7 @@
                 <span class="fa fa-star"></span>
                 <br>
             </div>
-            <div class="languages">
+            <div class="mylanguages">
                 <h3>Languages</h3>
                 <a>English</a>
                 <span class="fa fa-star checked"></span>
